# BatchCompressImage

./: Readme.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/luis/bci/: CCSParameter.java  CaesiumNative.java  FastImageInfo.kt  MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/rust_jni/: .gitignore  Cargo.toml  preparation_cmds.txt
app/src/rust_jni/.cargo/: config.toml
app/src/rust_jni/src/: jpeg.rs  lib.rs  png.rs  utils.rs  webp.rs
gradle/wrapper/: gradle-wrapper.properties
