[package]
name = "libcaesium"
version = "0.12.1"
edition = "2021"

[dependencies]
mozjpeg-sys = "1.1.1"
oxipng = "8.0"
libc = "0.2"
webp = "0.2.5"
infer = "0.15.0"
image = { version = "0.24.7", default-features = false, features = ["jpeg", "png", "webp", "gif"] }
img-parts = "0.3"
bytes = "1.3.0"
lodepng = "3.8.0"
imagequant = "4.2.0"
jni = "0.20.0"
log = "0.4.14"
simple_logger = "1.16.0"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.11.0"

[dev-dependencies]
dssim = "3.2.0"
kamadak-exif = "0.5.4"

[profile.release]
strip = true
opt-level = "z"
lto = true
debug-assertions = false

[lib]
name = "caesium_jni"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]
test = false
doctest = false
bench = false
doc = false
